force-app/main/default/objects/Place_Orders__c/Place_Orders__c.object-meta.xml
<CustomObject>
    <label>Place Order</label>
    <nameField>
        <displayFormat>PO-{0000}</displayFormat>
        <label>Pending Orders Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Place Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>