force-app/main/default/objects/Place_Orders__c/fields/calculate_amount__c.field-meta.xml
<CustomField>
    <fullName>calculate_amount__c</fullName>
    <formula>Quantity__c* Ticker__r.Current_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>calculate amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>