force-app/main/default/objects/Place_Orders__c/fields/Investment__c.field-meta.xml
<CustomField>
    <fullName>Investment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investment</label>
    <referenceTo>Your_Investment__c</referenceTo>
    <relationshipLabel>Place Orders (Investment)</relationshipLabel>
    <relationshipName>Place_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>