force-app/main/default/objects/Place_Orders__c/fields/Order_Path__c.field-meta.xml
<CustomField>
    <fullName>Order_Path__c</fullName>
    <label>Order Path</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order Received</fullName>
                <default>true</default>
                <label>Order Received</label>
            </value>
            <value>
                <fullName>Order Pending</fullName>
            </value>
            <value>
                <fullName>Order Rejected</fullName>
            </value>
            <value>
                <fullName>Order Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>