force-app/main/default/objects/Place_Orders__c/fields/Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Status__c</fullName>
    <label>Order Status</label>
    <length>15</length>
    <type>Text</type>
</CustomField>