force-app/main/default/objects/Place_Orders__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <label>Order Type</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>