force-app/main/default/objects/Place_Orders__c/fields/Ticker__c.field-meta.xml
<CustomField>
    <fullName>Ticker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ticker</label>
    <referenceTo>Watchlist__c</referenceTo>
    <relationshipLabel>Place Orders</relationshipLabel>
    <relationshipName>Place_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>