force-app/main/default/objects/Place_Orders__c/fields/TickerName__c.field-meta.xml
<CustomField>
    <fullName>TickerName__c</fullName>
    <label>TickerName</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>