force-app/main/default/objects/Place_Orders__c/fields/Type_of_Investment__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Investment__c</fullName>
    <label>Type of Investment</label>
    <length>15</length>
    <type>Text</type>
</CustomField>