force-app/main/default/objects/Place_Orders__c/fields/UserLookup__c.field-meta.xml
<CustomField>
    <fullName>UserLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UserLookup</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Place_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>