force-app/main/default/objects/Place_Orders__c/fields/Your_Investment_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Your_Investment_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Your Investment Lookup</label>
    <referenceTo>Your_Investment__c</referenceTo>
    <relationshipLabel>Place Orders</relationshipLabel>
    <relationshipName>Place_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>