force-app/main/default/objects/Place_Orders__c/recordTypes/Order_Routing.recordType-meta.xml
<RecordType>
    <fullName>Order_Routing</fullName>
    <active>true</active>
    <label>Order Routing</label>
</RecordType>