force-app/main/default/objects/Place_Orders__c/recordTypes/Place_Order.recordType-meta.xml
<RecordType>
    <fullName>Place_Order</fullName>
    <active>true</active>
    <label>Place Order</label>
</RecordType>