force-app/main/default/objects/Place_Orders__c/validationRules/amount_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>amount_rule</fullName>
    <active>false</active>
    <errorConditionFormula>Amount__c &lt; 0</errorConditionFormula>
    <errorMessage>Amount cannot be less then 0</errorMessage>
</ValidationRule>