force-app/main/default/objects/Place_Orders__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TickerName__c</columns>
    <columns>Quantity__c</columns>
    <columns>Purchase_Date__c</columns>
    <columns>Amount__c</columns>
    <columns>Order_Status__c</columns>
    <columns>Order_Type__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>